# FLxBC

./: .gitignore  Makefile  PROJECT_STATUS.md  README.md  hardhat.config.cjs  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
contracts/: ContributionToken.sol  FederationRegistry.sol  MisbehaviorRegistry.sol  TrainingLedger.sol
dashboard/: app.py
docs/: FLxBC-improvement-plan-5-13.md  mock-chain-boundary.md  privacy-experiment-results.md  privacy-threat-model.md  training-metrics-and-stopping-plan-5-13.md
scripts/: __init__.py  demo_check.py  deploy.js
src/flxbc/: __init__.py  api.py  chain.py  cli.py  config.py  crypto.py  data.py  ledger.py  model.py  presentation.py  privacy.py  secure_aggregation.py  simulation.py  strategy.py  training.py
tests/: test_api.py  test_api_privacy.py  test_artifact_encryption.py  test_config_privacy.py  test_crypto.py  test_dashboard_source.py  test_demo_check.py  test_ledger.py  test_makefile_commands.py  test_packaging.py  test_partitioning.py  test_presentation.py  test_privacy.py  test_readme_diagrams.py  test_secure_aggregation.py  test_simulation_privacy.py  test_simulation_smoke.py  test_strategy.py  test_training_metrics.py
