[project]
name = "flxbc"
version = "0.1.0"
description = "Local Mac demo for blockchain-audited federated learning over lightweight medical imaging data."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "cryptography>=42",
  "numpy>=1.26",
]

[project.optional-dependencies]
app = [
  "fastapi>=0.115",
  "pandas>=2.2",
  "plotly>=5.24",
  "streamlit>=1.38",
  "uvicorn[standard]>=0.30",
]
ml = [
  "flwr>=1.13",
  "medmnist>=3.0",
  "torch>=2.4",
  "torchvision>=0.19",
]
chain = [
  "web3>=7.0",
]
dev = [
  "httpx>=0.28",
  "pytest>=8.3",
  "ruff>=0.6",
]

[project.scripts]
flxbc = "flxbc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flxbc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
